bugfix - removing site name from footer menu on mobile

--- a/web/themes/custom/pineapple/sass/components/navigation/_main-menu.scss
+++ b/web/themes/custom/pineapple/sass/components/navigation/_main-menu.scss
@@ -217,7 +217,7 @@
       padding: $unit * 2;
       text-align: center;
 
-      .hamburger {
+      .hamburger-container {
         display: none;
       }
 
